fix footer flex direction and wrap

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -247,7 +247,8 @@ footer a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .langues-navbar2{
